plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
	id "io.freefair.lombok" version "6.6.3"

	id "org.sonarqube" version "3.5.0.2730"
}

group = 'rs.hnp.inventory'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.1'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.0.5'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest', version: '3.0.5'
	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.3.Final'
	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.0.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
